[gd_scene load_steps=10 format=2]

[ext_resource path="res://Music.gd" type="Script" id=1]
[ext_resource path="res://Cherry Blossom.gd" type="Script" id=2]
[ext_resource path="res://tree hit.ogg" type="AudioStream" id=3]
[ext_resource path="res://Tiny Jelly.ogg" type="AudioStream" id=4]
[ext_resource path="res://cherry blossom.png" type="Texture" id=5]
[ext_resource path="res://tree_shake.tres" type="Material" id=6]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.346337 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 2
emission_box_extents = Vector3( 5, 12.5, 1 )
flag_disable_z = true
spread = 20.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = -7.5
angular_velocity = 100.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 2 )
color = Color( 0.94902, 0.72549, 0.937255, 1 )

[node name="Cherry Blossom" type="StaticBody2D"]
position = Vector2( 0, -3 )
script = ExtResource( 2 )

[node name="cherry blossom" type="Sprite" parent="."]
material = ExtResource( 6 )
position = Vector2( 120, 40 )
texture = ExtResource( 5 )

[node name="Music" type="Timer" parent="cherry blossom"]
wait_time = 5.0
autostart = true
script = ExtResource( 1 )

[node name="Ambiance" type="AudioStreamPlayer" parent="cherry blossom/Music"]
stream = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2( 120, 40 )
polygon = PoolVector2Array( -18, -2, -16, -4, -12, -5, -9, -4, -6, -4, -2, -9, -3, -13, -8, -15, -4, -17, 0, -17, 2, -14, 4, -12, 10, -12, 12, -9, 8, -8, 11, -2, 7, -3, 9, 2, 4, 1, 3, 8, 5, 13, 6, 15, 14, 15, 17, 17, 20, 20, -19, 20, -17, 18, -10, 16, -4, 15, 2, 15, 2, 13, -3, 1, -8, 0 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2( 120, 40 )
polygon = PoolVector2Array( -18, -2, -16, -4, -12, -5, -9, -4, -6, -4, -2, -9, -3, -13, -8, -15, -4, -17, 0, -17, 2, -14, 4, -12, 10, -12, 12, -9, 8, -8, 11, -2, 7, -3, 9, 2, 4, 1, 3, 8, 5, 13, 6, 15, 14, 15, 17, 17, 20, 20, -19, 20, -17, 18, -10, 16, -4, 15, 2, 15, 2, 13, -3, 1, -8, 0 )

[node name="AxeHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( 120, 40 )
polygon = PoolVector2Array( 5, 13, 6, 15, 14, 15, 17, 17, 20, 20, -19, 20, -17, 18, -10, 16, -4, 15, 2, 15, 2, 13, -1, 4 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 120, 36 )
amount = 2
lifetime = 6.0
process_material = SubResource( 3 )
[connection signal="timeout" from="cherry blossom/Music" to="cherry blossom/Music" method="_on_Music_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
